--- a/imagesCode.ipynb
+++ b/imagesCode.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXpis+YuXCW9GKTlt4MIeq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +24,171 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/NoraHK3/DataSciProject/blob/main/imagesCode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step: Dish & Ingredient Encoding (Data Preprocessing)\n",
+        "In this step, we transform our  dataset into a machine learning-ready format that the model can understand and learn from. Since raw data (text, lists, or images) cannot be directly used by ML algorithms, we perform two key encoding operations:\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.   Dish Encoding\n",
+        "\n",
+        "What it does:\n",
+        "We convert each unique dish name (like Kabsa, Jareesh, Kleja) into a numeric label (dish_id).\n",
+        "\n",
+        "2.   Duplicate Detection\n",
+        "\n",
+        "What it does:\n",
+        "We check for any repeated images that have the same dish name and image path.\n",
+        "If found, we remove duplicates to avoid redundancy or overfitting.\n",
+        "\n",
+        "3. Ingredient Encoding (Multi-Hot Encoding)\n",
+        "\n",
+        "What it does:\n",
+        "We convert each list of ingredients for a dish (e.g., rice, chicken, spices) into multi-hot encoded vectors — a series of 0s and 1s representing ingredient presence.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "yleJsi7SJh5-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# === Phase 2 (Refactored): Dish Encoding + Duplicates + Ingredient Multi-hot ===\n",
+        "# Colab-ready: upload `SaudiFoodFile_standardized_consistent.csv` to /content first.\n",
+        "\n",
+        "import pandas as pd, numpy as np, ast, re, os\n",
+        "\n",
+        "# ---------------- CONFIG ----------------\n",
+        "SRC = \"/content/SaudiFoodFile_standardized_consistent.csv\"   # <-- path in Colab\n",
+        "OUT_DIR = \"/content\"\n",
+        "MERGE_TO_SINGLE = True   # If True, rely on one master (ml_table_multi_hot) and still export views for convenience\n",
+        "\n",
+        "# -------------- HELPERS -----------------\n",
+        "def parse_ingredients(val):\n",
+        "    \"\"\"Turn a list-like string or pipe-separated string into a clean Python list.\"\"\"\n",
+        "    # Converts text like \"['rice','chicken']\" or \"rice|chicken\" into a proper Python list\n",
+        "    # Ensures ingredients are parsed consistently regardless of format\n",
+        "    if pd.isna(val):\n",
+        "        return []\n",
+        "    if isinstance(val, list):\n",
+        "        return [str(x).strip() for x in val if str(x).strip()]\n",
+        "    s = str(val).strip()\n",
+        "    if s.startswith('[') and s.endswith(']'):\n",
+        "        try:\n",
+        "            parsed = ast.literal_eval(s)\n",
+        "            return [str(x).strip() for x in parsed if str(x).strip()]\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "    return [x.strip() for x in s.split('|') if x.strip()]\n",
+        "\n",
+        "def sanitize_col(name):\n",
+        "    \"\"\"Safe ingredient column names: lowercase, underscores, alnum-only.\"\"\"\n",
+        "    # Ensures ingredient column names are consistent, lowercase, and usable in code\n",
+        "    name = str(name).lower()\n",
+        "    name = re.sub(r\"[^\\w]+\", \"_\", name)\n",
+        "    name = re.sub(r\"_+\", \"_\", name).strip(\"_\")\n",
+        "    return name\n",
+        "\n",
+        "def save_csv(df, path):\n",
+        "    # Saves files in UTF-8 BOM encoding to prevent Arabic text from breaking in Excel\n",
+        "    df.to_csv(path, index=False, encoding=\"utf-8-sig\")\n",
+        "\n",
+        "# Create output directory if it doesn’t exist\n",
+        "os.makedirs(OUT_DIR, exist_ok=True)\n",
+        "\n",
+        "# -------------- LOAD --------------------\n",
+        "# Try reading the dataset with multiple encodings to avoid read errors\n",
+        "df = None\n",
+        "for enc in [\"utf-8\", \"utf-8-sig\", \"cp1256\"]:\n",
+        "    try:\n",
+        "        df = pd.read_csv(SRC, encoding=enc)\n",
+        "        break\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "if df is None:\n",
+        "    raise RuntimeError(\"Could not read the CSV with common encodings. Check path/encoding.\")\n",
+        "\n",
+        "# Ensure all required columns exist before continuing\n",
+        "required = {\"dish_name\", \"classifications_std_list\", \"image_file\"}\n",
+        "missing = required - set(df.columns)\n",
+        "if missing:\n",
+        "    raise ValueError(f\"Missing required columns: {missing}\")\n",
+        "\n",
+        "# -------------- FUNCTION 1: Dish encoding + duplicate detection --------------\n",
+        "# Parse ingredients column first so it’s ready for later encoding steps\n",
+        "df[\"ingredients_list\"] = df[\"classifications_std_list\"].apply(parse_ingredients)\n",
+        "\n",
+        "# Create numeric IDs for dish names (dish_id) sorted by frequency for stable results\n",
+        "# Used in training models (since ML models need numeric labels instead of text)\n",
+        "dish_counts = df[\"dish_name\"].value_counts()\n",
+        "dish_order = sorted(dish_counts.index, key=lambda d: (-dish_counts[d], d))\n",
+        "dish2id = {dish: i for i, dish in enumerate(dish_order)}\n",
+        "df[\"dish_id\"] = df[\"dish_name\"].map(dish2id)\n",
+        "\n",
+        "# 🔹 ✅ Duplicate Check (same image name + path)\n",
+        "# Ensures no repeated images (same file path/name) exist in the dataset\n",
+        "# Duplicates could bias the model, so we print and remove them\n",
+        "if df.duplicated(subset=[\"image_file\"]).any():\n",
+        "    dupes = df[df.duplicated(subset=[\"image_file\"], keep=False)]\n",
+        "    print(f\"⚠️ Found {len(dupes)} duplicate image entries (same image name & path). They will be removed.\")\n",
+        "    df = df.drop_duplicates(subset=[\"image_file\"], keep=\"first\")\n",
+        "else:\n",
+        "    print(\"✅ No duplicate image_file entries found.\")\n",
+        "\n",
+        "# -------------- MAIN OUTPUTS --------------\n",
+        "# Creates unified dataset containing dish labels and ingredient data\n",
+        "# 'core_cols' are kept as main descriptive columns for training\n",
+        "core_cols = [\"dish_id\",\"dish_name\", \"image_file\", \"ingredients_list\"]\n",
+        "if \"scrape_date\" in df_dedup.columns:\n",
+        "    core_cols.append(\"scrape_date\")\n",
+        "\n",
+        "# 'ing_cols' represents ingredient multi-hot encoded columns (if they exist)\n",
+        "ing_cols = [c for c in df_dedup.columns if c.startswith(\"ing_\")]\n",
+        "\n",
+        "# Build the main ML table that will be used for training (merged master)\n",
+        "ml_master = df_dedup[core_cols + ing_cols].copy()\n",
+        "save_csv(ml_master, f\"{OUT_DIR}/ml_table_multi_hot.csv\")\n",
+        "\n",
+        "# Convenience “views” — dish-only and ingredient-only versions for separate tasks\n",
+        "# (not mandatory but useful for dish classification or ingredient detection training)\n",
+        "dish_view = ml_master[[\"image_file\", \"dish_name\", \"dish_id\"]].copy()\n",
+        "save_csv(dish_view, f\"{OUT_DIR}/dish_classification_table.csv\")\n",
+        "\n",
+        "ing_view = ml_master[[\"image_file\"] + ing_cols].copy()\n",
+        "save_csv(ing_view, f\"{OUT_DIR}/ingredient_detection_table.csv\")\n",
+        "\n",
+        "# -------------- OPTIONAL: Single merged master --------------\n",
+        "# If MERGE_TO_SINGLE=True, we export one final master file that combines everything\n",
+        "# This serves as the single source of truth for ML model training\n",
+        "if MERGE_TO_SINGLE:\n",
+        "    save_csv(ml_master, f\"{OUT_DIR}/master_training_table.csv\")  # alias of ml_table_multi_hot\n",
+        "\n",
+        "# -------------- SUMMARY PRINT --------------\n",
+        "# Prints a summary showing what was done, how many duplicates were found, and how many outputs were generated\n",
+        "print(\"Done Encoding\")\n",
+        "print({\n",
+        "    \"rows_raw\": len(df),\n",
+        "    \"rows_dedup\": len(df_dedup),\n",
+        "    \"duplicates_found\": len(dupes),\n",
+        "    \"n_dishes\": len(dish2id),\n",
+        "    \"n_ingredients\": len(vocab),\n",
+        "    \"outputs\": [\n",
+        "        \"ml_table_multi_hot.csv\",\n",
+        "        \"dish_classification_table.csv\",\n",
+        "        \"ingredient_detection_table.csv\",\n",
+        "        \"master_training_table.csv\" if MERGE_TO_SINGLE else \"(merged master omitted)\"\n",
+        "    ]\n",
+        "})\n"
+      ],
+      "metadata": {
+        "id": "bv6wHBSCIdFq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
