--- a/Data_cleaning_final.ipynb
+++ b/Data_cleaning_final.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmF/NY2Gf7GqJlwxCgkfu3",
+      "authorship_tag": "ABX9TyPS8E0cPFQm1zEI37bug2Oe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +29,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 2: Merge Image Filenames and Assign Unique IDs\n",
+        "#Step 2: Merge Image File names and Assign Unique IDs\n",
+        "\n",
+        "**what is done**\n",
         "\n",
         "\n",
         "We’re combining the Arabic and English datasets so that each English row keeps its original image file name and a new unique ID.\n",
         "\n",
-        "Why:\n",
+        "**Why:**\n",
         "\n",
         "The Arabic file has the real image filenames (used later for matching or renaming images).\n",
         "\n",
@@ -42,7 +44,7 @@
         "\n",
         "Merging them lets us link each translated dish to its actual image and give every dish a clear numeric ID for easy reference in preprocessing and modeling.\n",
         "\n",
-        "steps:\n",
+        "**steps:**\n",
         "\n",
         "Read both CSVs using pandas.\n",
         "\n",
@@ -470,6 +472,8 @@
         "#Step 3: Remove Duplicate Rows by 'original names'\n",
         "\n",
         "\n",
+        "**what is done**\n",
+        "\n",
         "\n",
         "We’re cleaning the dataset by removing any duplicate rows that have the same **original image name**.\n",
         "\n",
@@ -553,10 +557,14 @@
       "source": [
         "# Step 4: Rename ZIP Images Using CSV Mapping (Arabic-safe)\n",
         "\n",
+        "**what is done**\n",
+        "\n",
         "\n",
         "Rename images inside a ZIP to the format img(ID).ext using the CSV’s original names → image_id mapping.\n",
         "\n",
-        "Why:\n",
+        "**Why:**\n",
+        "\n",
+        "\n",
         "Ensures consistent, model-friendly filenames and reliable linkage between each dish row and its image.\n",
         "\n",
         "\n",
@@ -957,6 +965,8 @@
       "cell_type": "markdown",
       "source": [
         "#Step 5: Update Image Filenames Inside the CSV\n",
+        "\n",
+        "**what is done**\n",
         "\n",
         "\n",
         "Rename the image file entries inside the CSV so they match the renamed image format img(ID).ext.\n",
@@ -1446,6 +1456,7 @@
       "source": [
         "#Step 7: Clean and Standardize Dish Names\n",
         "\n",
+        "**what is done**\n",
         "\n",
         "This step cleans and unifies all dish names — keeping authentic Arabic and Middle Eastern dishes intact while removing unnecessary English words, event mentions, and quantity descriptions.\n",
         "\n",
