--- a/Data_cleaning_final.ipynb
+++ b/Data_cleaning_final.ipynb
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "NVYcEN5yQtDm"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1018,7 +1018,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 7: Clean and Standardize Ingredients\n",
+        "#Step 8: Clean and Standardize Ingredients\n",
         "\n",
         "\n",
         "This step cleans and standardizes all ingredient information before the consistency check.\n",
@@ -1731,6 +1731,166 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# === Ingredient Encoding Only - Keep All Original Columns ===\n",
+        "# Colab-ready: upload ⁠ SaudiFoodFile_standardized_consistent.csv ⁠ to /content first.\n",
+        "\n",
+        "import pandas as pd, numpy as np, ast, re, os\n",
+        "\n",
+        "# ---------------- CONFIG ----------------\n",
+        "SRC = \"./SaudiFoodFile_standardized_consistent (1).csv\"   # <-- path in Colab\n",
+        "OUT_DIR = \"/content\"\n",
+        "\n",
+        "# -------------- HELPERS -----------------\n",
+        "def parse_ingredients(val):\n",
+        "    \"\"\"Turn a list-like string or pipe-separated string into a clean Python list.\"\"\"\n",
+        "    if pd.isna(val):\n",
+        "        return []\n",
+        "    if isinstance(val, list):\n",
+        "        return [str(x).strip() for x in val if str(x).strip()]\n",
+        "    s = str(val).strip()\n",
+        "    if s.startswith('[') and s.endswith(']'):\n",
+        "        try:\n",
+        "            parsed = ast.literal_eval(s)\n",
+        "            return [str(x).strip() for x in parsed if str(x).strip()]\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "    return [x.strip() for x in s.split('|') if x.strip()]\n",
+        "\n",
+        "def sanitize_col(name):\n",
+        "    \"\"\"Safe ingredient column names: lowercase, underscores, alnum-only.\"\"\"\n",
+        "    name = str(name).lower()\n",
+        "    name = re.sub(r\"[^\\w]+\", \"_\", name)\n",
+        "    name = re.sub(r\"__+\", \"_\", name).strip(\"_\") # Fix: Use \"__+\" to match one or more underscores\n",
+        "    return name\n",
+        "\n",
+        "def save_csv(df, path):\n",
+        "    df.to_csv(path, index=False, encoding=\"utf-8-sig\")\n",
+        "\n",
+        "os.makedirs(OUT_DIR, exist_ok=True)\n",
+        "\n",
+        "# -------------- LOAD --------------------\n",
+        "df = None\n",
+        "for enc in [\"utf-8\", \"utf-8-sig\", \"cp1256\"]:\n",
+        "    try:\n",
+        "        df = pd.read_csv(SRC, encoding=enc)\n",
+        "        break\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "if df is None:\n",
+        "    raise RuntimeError(\"Could not read the CSV with common encodings. Check path/encoding.\")\n",
+        "\n",
+        "# Check for required ingredients column\n",
+        "if \"classifications_std_list\" not in df.columns:\n",
+        "    raise ValueError(\"Missing required column: classifications_std_list\")\n",
+        "\n",
+        "# -------------- INGREDIENT ENCODING --------------\n",
+        "# Parse ingredients\n",
+        "df[\"ingredients_list\"] = df[\"classifications_std_list\"].apply(parse_ingredients)\n",
+        "\n",
+        "# Build multi-hot ingredient columns and vocab\n",
+        "all_ings = [ing for lst in df[\"ingredients_list\"] for ing in lst]\n",
+        "vocab = sorted(set(all_ings))\n",
+        "\n",
+        "print(f\"Found {len(vocab)} unique ingredients:\")\n",
+        "for i, ing in enumerate(vocab[:10]):  # Show first 10\n",
+        "    print(f\"  {i+1}. {ing}\")\n",
+        "if len(vocab) > 10:\n",
+        "    print(f\"  ... and {len(vocab) - 10} more\")\n",
+        "\n",
+        "# Create multi-hot encoded columns and add them to the original dataframe\n",
+        "for ing in vocab:\n",
+        "    col = f\"ing_{sanitize_col(ing)}\"\n",
+        "    df[col] = df[\"ingredients_list\"].apply(lambda lst, i=ing: int(i in lst))\n",
+        "\n",
+        "# -------------- OUTPUTS --------------\n",
+        "# Save the complete dataframe with all original columns + new ingredient encoding columns\n",
+        "save_csv(df, f\"{OUT_DIR}/dataset_with_ingredient_encoding.csv\")\n",
+        "\n",
+        "# Optional: Save just the ingredient encoding columns for reference\n",
+        "ing_cols = [c for c in df.columns if c.startswith(\"ing_\")]\n",
+        "ingredient_only_table = df[ing_cols].copy()\n",
+        "save_csv(ingredient_only_table, f\"{OUT_DIR}/ingredient_encoding_columns_only.csv\")\n",
+        "\n",
+        "# Optional: Save ingredient vocabulary\n",
+        "vocab_df = pd.DataFrame({\"ingredient_name\": vocab})\n",
+        "save_csv(vocab_df, f\"{OUT_DIR}/ingredient_vocabulary.csv\")\n",
+        "\n",
+        "# -------------- SUMMARY PRINT --------------\n",
+        "print(\"\\n✅ Ingredient Encoding Complete\")\n",
+        "print({\n",
+        "    \"total_rows\": len(df),\n",
+        "    \"total_ingredients\": len(vocab),\n",
+        "    \"ingredient_columns_created\": len(ing_cols),\n",
+        "    \"total_columns_in_output\": len(df.columns),\n",
+        "    \"output_files\": [\n",
+        "        \"dataset_with_ingredient_encoding.csv (all original columns + ingredient encoding)\",\n",
+        "        \"ingredient_encoding_columns_only.csv\",\n",
+        "        \"ingredient_vocabulary.csv\"\n",
+        "    ]\n",
+        "})\n",
+        "\n",
+        "# Show the structure of the output\n",
+        "print(f\"\\n📊 Output dataset has {len(df.columns)} total columns:\")\n",
+        "print(f\"   - Original columns: {len(df.columns) - len(ing_cols)}\")\n",
+        "print(f\"   - Ingredient encoding columns: {len(ing_cols)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AO_spLlIJP5k",
+        "outputId": "c12f695c-1602-4dc1-d1bf-5c4ba3f591a9"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 104 unique ingredients:\n",
+            "  1. almond\n",
+            "  2. appetizer\n",
+            "  3. bay\n",
+            "  4. beef\n",
+            "  5. bread\n",
+            "  6. butter\n",
+            "  7. camel\n",
+            "  8. cardamom\n",
+            "  9. carrot\n",
+            "  10. cheese\n",
+            "  ... and 94 more\n",
+            "\n",
+            "✅ Ingredient Encoding Complete\n",
+            "{'total_rows': 278, 'total_ingredients': 104, 'ingredient_columns_created': 104, 'total_columns_in_output': 109, 'output_files': ['dataset_with_ingredient_encoding.csv (all original columns + ingredient encoding)', 'ingredient_encoding_columns_only.csv', 'ingredient_vocabulary.csv']}\n",
+            "\n",
+            "📊 Output dataset has 109 total columns:\n",
+            "   - Original columns: 5\n",
+            "   - Ingredient encoding columns: 104\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-3339305461.py:70: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  df[col] = df[\"ingredients_list\"].apply(lambda lst, i=ing: int(i in lst))\n",
+            "/tmp/ipython-input-3339305461.py:70: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  df[col] = df[\"ingredients_list\"].apply(lambda lst, i=ing: int(i in lst))\n",
+            "/tmp/ipython-input-3339305461.py:70: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  df[col] = df[\"ingredients_list\"].apply(lambda lst, i=ing: int(i in lst))\n",
+            "/tmp/ipython-input-3339305461.py:70: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  df[col] = df[\"ingredients_list\"].apply(lambda lst, i=ing: int(i in lst))\n",
+            "/tmp/ipython-input-3339305461.py:70: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  df[col] = df[\"ingredients_list\"].apply(lambda lst, i=ing: int(i in lst))\n",
+            "/tmp/ipython-input-3339305461.py:70: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  df[col] = df[\"ingredients_list\"].apply(lambda lst, i=ing: int(i in lst))\n"
+          ]
+        }
+      ]
     }
   ]
 }
