--- a/Data_cleaning_final.ipynb
+++ b/Data_cleaning_final.ipynb
@@ -225,7 +225,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 2: Merge Image File names and Assign Unique IDs\n",
+        "# **2- Data Cleaning**\n",
+        "\n",
+        "#**Step 1: Merge Image File names and Assign Unique IDs**\n",
         "\n",
         "**what is done**\n",
         "\n",
@@ -323,7 +325,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 3: Remove Duplicate Rows by 'original names'\n",
+        "#**Step 2: Remove Duplicate Rows by 'original names'**\n",
         "\n",
         "\n",
         "**what is done**\n",
@@ -394,7 +396,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 4: Rename ZIP Images Using CSV Mapping (Arabic-safe)\n",
+        "# **Step 3: Rename ZIP Images Using CSV Mapping (Arabic-safe)**\n",
         "\n",
         "**what is done**\n",
         "\n",
@@ -581,7 +583,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 5: Update Image Filenames Inside the CSV\n",
+        "#**Step 4: Update Image Filenames Inside the CSV**\n",
         "\n",
         "**what is done**\n",
         "\n",
@@ -662,7 +664,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 6: Remove the “original names” Column\n",
+        "#**Step 5: Remove the “original names” Column**\n",
         "\n",
         "\n",
         "Delete the **`original names`** column from the dataset.\n",
@@ -722,7 +724,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 7: Clean and Standardize Dish Names\n",
+        "#**Step 6: Clean and Standardize Dish Names**\n",
         "\n",
         "**what is done**\n",
         "\n",
@@ -1018,7 +1020,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Step 8: Clean and Standardize Ingredients\n",
+        "#**Step 7: Clean and Standardize Ingredients**\n",
         "\n",
         "\n",
         "This step cleans and standardizes all ingredient information before the consistency check.\n",
@@ -1525,7 +1527,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Ingredient Cleaning - Step 3 — Final Consistency Pass**\n",
+        "#**Step 7.1: Clean and Standardize Ingredients - Final Consistency Pass**\n",
         "\n",
         "After cleaning and standardizing the ingredients, some names were still not completely consistent.\n",
         "For example, a few dishes still used slightly different spellings or duplicate ingredient terms such as:\n",
@@ -1845,7 +1847,7 @@
         "id": "AO_spLlIJP5k",
         "outputId": "c12f695c-1602-4dc1-d1bf-5c4ba3f591a9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
