--- a/Data_cleaning_final.ipynb
+++ b/Data_cleaning_final.ipynb
@@ -1897,6 +1897,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **Step 8: Manual Dish Name Cleaning**\n",
+        "\n",
+        "\n",
+        "what we did and why:\n",
+        "\n",
+        "After the automated dish name cleaning, we manually reviewed all names because some were incorrectly translated, some were accidentally truncated by the cleaning process, and others still contained unnecessary descriptions.\n",
+        "\n",
+        "\n",
+        "the outcome:\n",
+        "\n",
+        "This manual correction ensured that all dish names are accurate, complete, and consistently formatted for further analysis."
+      ],
+      "metadata": {
+        "id": "4bHV06X9Rbfw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#  3 – Image Processing:\n",
         "image preprocessing is an essential stage before any data analysis or machine-learning model training.\n",
         "\n",
@@ -1944,7 +1963,7 @@
       "metadata": {
         "id": "r5qUsD9LNwR2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1994,7 +2013,7 @@
           "height": 138
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2247,7 +2266,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2289,7 +2308,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2341,7 +2360,7 @@
       "metadata": {
         "id": "f54zHFQsOlpa"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2440,7 +2459,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2509,7 +2528,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2574,7 +2593,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
