--- a/EDA_Attempt.ipynb
+++ b/EDA_Attempt.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -190,7 +190,7 @@
         "id": "tUkSpgdzo8a1",
         "outputId": "d672e538-1f52-4238-a53a-3ed8c3ee2fc0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1476,7 +1476,7 @@
           "height": 1000
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2039,7 +2039,7 @@
           "height": 1000
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2414,7 +2414,7 @@
         "id": "Nqr_O_L2pRB8",
         "outputId": "f953acaf-9e72-40fa-b8aa-bba1ae2d5855"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2956,7 +2956,7 @@
           "height": 1000
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3450,7 +3450,7 @@
         "id": "n5AGRFesp7HU",
         "outputId": "561d58aa-ac7f-44c9-e891-b2a26e4cf81b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3718,7 +3718,7 @@
           "height": 1000
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4136,7 +4136,7 @@
           "height": 1000
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4415,7 +4415,7 @@
           "height": 1000
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4527,6 +4527,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From the comparative analysis conducted above, we notice some distinction between our data and the general food patterns found in Nutrition5K. The higher mean intensity of the red and green colors in the Saudi dataset can be attributed to the generous and frequent use of spices, such as tumeric and saffron, as well as aromatic herbs in the preparation of many traditional Saudi dishes.\n",
+        "\n",
+        "Furthermore, the higher average texture in Saudi food is representative of the traditional plating style of Saudi dishes where components such as rice, meat, and toppings are piled rather than scattered like in Western dishes.\n",
+        "\n",
+        "These findings suggest that our model will need to be better attuned to the texture-based traits and wamer color palettes of the Saudi cuisine.  "
+      ],
+      "metadata": {
+        "id": "JnAkT73GzcZ1"
+      }
     }
   ]
 }
