--- a/EDA_Attempt.ipynb
+++ b/EDA_Attempt.ipynb
@@ -1744,7 +1744,7 @@
           "height": 1000
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1905,7 +1905,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##3. Data Bias Discovery"
+        "##3. Data Bias Discovery\n",
+        "\n",
+        "Now we will try to discover any bias that exists in the data, we do this to discover patterns that can affect the final result of our multi-label food classification."
       ],
       "metadata": {
         "id": "BYFePE1_NF8w"
@@ -2205,7 +2207,7 @@
           "height": 1000
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2339,20 +2341,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "🔹 Bias Analysis Summary — Nutrition5k Dataset\n",
+        "**Discovered Biases in the Nutrition 5K dataset**\n",
         "\n",
-        "The Nutrition5k bias analysis reveals several important insights about the dataset’s structure, representation, and potential limitations that could affect model fairness, generalization, and real-world applicability.\n",
+        "The bias analysis reveals several important information about the dataset’s structure, representation, and potential limitations that could affect model fairness, generalization, and real-world applicability.\n",
         "\n",
-        "1️⃣ Data Collection Bias\n",
+        "<br>1. Data Collection Bias\n",
         "\n",
-        "The dataset’s caloric density ranges from 0 to 9.03 cal/g, with a few extreme outliers (top 1% of dishes).\n",
+        "The dataset’s caloric density range shows a few extreme outliers (top 1% of dishes), these outliers likely stem from laboratory measurement inconsistencies or rare high-fat dishes, suggesting potential instrumental bias in the calorie-per-gram measurements.\n",
         "\n",
-        "These outliers likely stem from laboratory measurement inconsistencies or rare high-fat dishes, suggesting potential instrumental bias in the calorie-per-gram measurements.\n",
-        "\n",
-        "Implication:\n",
+        "Result:\n",
         "The controlled lab environment ensures precision but doesn’t capture real-world variations in cooking style, serving size, or portion density.\n",
         "\n",
-        "2️⃣ Nutritional Representation Bias\n",
+        "<br>2. Nutritional Representation Bias\n",
         "\n",
         "The macronutrient breakdown shows imbalanced representation:\n",
         "\n",
@@ -2366,37 +2366,28 @@
         "\n",
         "The warning “Limited balanced nutritional profiles” indicates that most samples are skewed toward carb-rich foods.\n",
         "\n",
-        "Implication:\n",
+        "Result:\n",
         "Models trained on this dataset may overpredict carbohydrate-heavy meals and struggle to generalize to balanced or high-fat foods.\n",
         "\n",
-        "3️⃣ Cultural & Geographic Bias\n",
+        "<br>3. Cultural & Geographic Bias\n",
         "\n",
         "Average macronutrient composition is 55% carbohydrates, 20% fat, and 25% protein, matching typical Western cafeteria-style meals.\n",
         "\n",
         "Compared to global dietary patterns:\n",
         "\n",
-        "Western diets → higher fat, moderate carbs.\n",
+        "Western diets have higher fat, moderate carbs.\n",
         "\n",
-        "Asian diets → higher carbs, lower fat.\n",
+        "Asian diets have higher carbs, lower fat.\n",
         "\n",
-        "Mediterranean → more balanced, healthy fats.\n",
+        "Mediterranean have more balanced, healthy fats.\n",
         "\n",
         "The script explicitly notes:\n",
         "“Nutrition5k likely overrepresents Western cafeteria food.”\n",
         "\n",
-        "Implication:\n",
+        "Result:\n",
         "The dataset underrepresents culturally diverse and traditional cuisines, creating a Western-centric bias in visual and nutritional patterns.\n",
         "\n",
-        "4️⃣ Caloric Density Bias\n",
-        "\n",
-        "The caloric density distribution shows positive skew (1.158) → meaning there are many low-calorie dishes and a few high-calorie outliers.\n",
-        "\n",
-        "K-means clustering reveals three distinct clusters, but one cluster dominates (~60%), indicating category imbalance.\n",
-        "\n",
-        "Implication:\n",
-        "The dataset is not uniformly distributed across caloric ranges; models might learn to associate “normal” meals with low-to-moderate caloric density and fail to capture high-calorie examples well.\n",
-        "\n",
-        "5️⃣ Measurement & Methodology Bias\n",
+        "<br>4. Measurement & Methodology Bias\n",
         "\n",
         "The data was collected in controlled laboratory settings, which:\n",
         "\n",
@@ -2406,37 +2397,18 @@
         "\n",
         "May produce overly precise nutrient values that lack real-world uncertainty.\n",
         "\n",
-        "Implication:\n",
+        "Result:\n",
         "Although reliable for research, this precision gives an idealized view of food, which limits real-world prediction performance (especially for homemade or culturally varied meals).\n",
         "\n",
-        "6️⃣ Statistical Bias Quantification\n",
-        "\n",
-        "Coefficient of Variation (CV):\n",
-        "\n",
-        "Fat: 1.55 → highly variable.\n",
-        "\n",
-        "Carbs: 1.12, Protein: 1.07 → moderate variability.\n",
-        "\n",
-        "Caloric density: 0.82 → relatively consistent.\n",
-        "\n",
-        "This confirms fat content is the most inconsistent feature, while calorie-per-gram measurements are stable but potentially homogenized.\n",
-        "\n",
-        "✅ Overall Conclusion\n",
+        "<br>**Overall Conclusion**\n",
         "\n",
         "The Nutrition5k dataset provides high-quality, controlled nutritional data but exhibits several systematic biases:\n",
         "\n",
-        "Overrepresentation of Western, carbohydrate-heavy foods\n",
+        "1. Overrepresentation of Western, carbohydrate-heavy foods\n",
         "\n",
-        "Underrepresentation of balanced meals and diverse global cuisines\n",
+        "2. Underrepresentation of balanced meals and diverse global cuisines\n",
         "\n",
-        "Idealized lab conditions that may not translate to real-world food variability\n",
-        "\n",
-        "These biases should be acknowledged and mitigated when training models for general food recognition or nutrition prediction.\n",
-        "For your Saudi Cuisine project, this means:\n",
-        "\n",
-        "Using Nutrition5k only as a reference dataset, not as the main training source.\n",
-        "\n",
-        "Ensuring your local dataset (Saudi dishes) balances these gaps with culturally and nutritionally diverse samples."
+        "3. Idealized lab conditions that may not translate to real-world food variability\n"
       ],
       "metadata": {
         "id": "BP10gNVEOdMI"
