--- a/EDA_Attempt.ipynb
+++ b/EDA_Attempt.ipynb
@@ -1890,6 +1890,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Discussing the statistical findings:<br>\n",
+        "The dataset metadata included 555 samples, each one of them shows the nutrional aspects of it.\n",
+        "\n",
+        "- Calorie Density: most dishes have around 1-2 cal/g, which means we have very few high-calorie dishes.\n",
+        "\n",
+        "- Fat: The skweness is very high in this category, many dishes have litter fat which meaans there is a low-fat bias.\n",
+        "\n",
+        "- Carbohydrates:The data is moderately right-skewed, showing many carb-light dishes but also some high-carb outliers.\n",
+        "\n",
+        "Protein: most dishes have low protein, but a few are high in protein, confirming that protein-rich dishes are underrepresented.\n",
+        "\n",
+        "The Nutrition5k dataset is nutritionally unbalanced, being rich in carbohydrates, low in fats, and modest in proteins along with skewed distributions that highlights a bias toward certain types of meals rather than a nutritionally diverse food spectrum.\n",
+        "\n",
         "Discussing the graph findings for the Nutrtion 5K dataset:\n",
         "\n",
         "- Distribution graphs of nutritional component:<br>Most dishes have a lower presence of nutrtional component per gram\n",
@@ -2412,6 +2425,15 @@
       ],
       "metadata": {
         "id": "BP10gNVEOdMI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##4. Visual Composition analysis"
+      ],
+      "metadata": {
+        "id": "LbZj_FruX9rG"
       }
     },
     {
